@@ -34,15 +34,14 @@ $resources[$i]->fromArray(array (
     'id'                    => $i,
     'type'                  => 'document',
     'contentType'           => 'text/html',
-    'pagetitle'             => 'Subscription Confirm',
+    'pagetitle'             => 'GoodNews Subscription Confirm',
     'longtitle'             => '',
     'description'           => '',
-    'alias'                 => 'subscription-confirm',
+    'alias'                 => 'goodnews-subscription-confirm',
     'link_attributes'       => '',
     'published'             => 1,
     'pub_date'              => 0,
     'unpub_date'            => 0,
-    'parent'                => 0,
     'isfolder'              => 0,
     'introtext'             => '',
     'richtext'              => 0,
@@ -81,15 +80,14 @@ $resources[$i]->fromArray(array (
     'id'                    => $i,
     'type'                  => 'document',
     'contentType'           => 'text/html',
-    'pagetitle'             => 'Subscription Mail Sent',
+    'pagetitle'             => 'GoodNews Subscription Mail Sent',
     'longtitle'             => '',
     'description'           => '',
-    'alias'                 => 'subscription-mail-sent',
+    'alias'                 => 'goodnews-subscription-mail-sent',
     'link_attributes'       => '',
     'published'             => 1,
     'pub_date'              => 0,
     'unpub_date'            => 0,
-    'parent'                => 0,
     'isfolder'              => 0,
     'introtext'             => '',
     'richtext'              => 0,
@@ -128,15 +126,14 @@ $resources[$i]->fromArray(array (
     'id'                    => $i,
     'type'                  => 'document',
     'contentType'           => 'text/html',
-    'pagetitle'             => 'Subscription Success',
+    'pagetitle'             => 'GoodNews Subscription Success',
     'longtitle'             => '',
     'description'           => '',
-    'alias'                 => 'subscription-success',
+    'alias'                 => 'goodnews-subscription-success',
     'link_attributes'       => '',
     'published'             => 1,
     'pub_date'              => 0,
     'unpub_date'            => 0,
-    'parent'                => 0,
     'isfolder'              => 0,
     'introtext'             => '',
     'richtext'              => 0,
@@ -175,15 +172,14 @@ $resources[$i]->fromArray(array (
     'id'                    => $i,
     'type'                  => 'document',
     'contentType'           => 'text/html',
-    'pagetitle'             => 'Subscription Update',
+    'pagetitle'             => 'GoodNews Subscription Update',
     'longtitle'             => '',
     'description'           => '',
-    'alias'                 => 'subscription-update',
+    'alias'                 => 'goodnews-subscription-update',
     'link_attributes'       => '',
     'published'             => 1,
     'pub_date'              => 0,
     'unpub_date'            => 0,
-    'parent'                => 0,
     'isfolder'              => 0,
     'introtext'             => '',
     'richtext'              => 0,
@@ -222,15 +218,14 @@ $resources[$i]->fromArray(array (
     'id'                    => $i,
     'type'                  => 'document',
     'contentType'           => 'text/html',
-    'pagetitle'             => 'Subscription',
+    'pagetitle'             => 'GoodNews Subscription',
     'longtitle'             => '',
     'description'           => '',
-    'alias'                 => 'subscription',
+    'alias'                 => 'goodnews-subscription',
     'link_attributes'       => '',
     'published'             => 1,
     'pub_date'              => 0,
     'unpub_date'            => 0,
-    'parent'                => 0,
     'isfolder'              => 0,
     'introtext'             => '',
     'richtext'              => 0,
@@ -269,15 +264,14 @@ $resources[$i]->fromArray(array (
     'id'                    => $i,
     'type'                  => 'document',
     'contentType'           => 'text/html',
-    'pagetitle'             => 'Unsubscribe',
+    'pagetitle'             => 'GoodNews Unsubscribe',
     'longtitle'             => '',
     'description'           => '',
-    'alias'                 => 'unsubscribe',
+    'alias'                 => 'goodnews-unsubscribe',
     'link_attributes'       => '',
     'published'             => 1,
     'pub_date'              => 0,
     'unpub_date'            => 0,
-    'parent'                => 0,
     'isfolder'              => 0,
     'introtext'             => '',
     'richtext'              => 0,
@@ -316,15 +310,14 @@ $resources[$i]->fromArray(array (
     'id'                    => $i,
     'type'                  => 'document',
     'contentType'           => 'text/html',
-    'pagetitle'             => 'Request Links',
+    'pagetitle'             => 'GoodNews Request Links',
     'longtitle'             => '',
     'description'           => '',
-    'alias'                 => 'request-links',
+    'alias'                 => 'goodnews-request-links',
     'link_attributes'       => '',
     'published'             => 1,
     'pub_date'              => 0,
     'unpub_date'            => 0,
-    'parent'                => 0,
     'isfolder'              => 0,
     'introtext'             => '',
     'richtext'              => 0,
